--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,3 +1,4 @@
+#Workflows
 name: "Github Workflow"
 on:
   push:
@@ -20,6 +21,6 @@ jobs:
 
       - name: Ensure Jest is Executable
         run: chmod +x node_modules/.bin/jest
-        
+
       - name: "Run tests"
         run: "npm test"
