--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,8 @@ jobs:
 
       - name: "Install dependencies"
         run: "npm install"
+      
+      - echo: "Running tests"
 
       - name: Ensure Jest is Executable
         run: chmod +x node_modules/.bin/jest
