Using Strategy Matrix

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,13 +9,19 @@ on:
 jobs:
   build:
     runs-on: "ubuntu-latest"
+
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x]
     steps:
       - name: "Checkout Repository"
         uses: "actions/checkout@v3"
 
       - name: "Set uo Nodejs"
         uses: "actions/setup-node@v3"
-
+        with:
+          node-version: ${{ matrix.node-version }}
+          
       - name: "Install dependencies"
         run: "npm install"
       
